--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "prisma": "^5.7.1",
     "puppeteer": "^24.12.0",
@@ -37,6 +38,7 @@
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.5",
     "@types/puppeteer": "^7.0.4",
@@ -44,8 +46,8 @@
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "@vitejs/plugin-vue": "^4.6.2",
-    "cross-env": "^7.0.3",
     "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
     "element-plus": "^2.4.4",
